--- a/movieWeb/css/stely_index.css
+++ b/movieWeb/css/stely_index.css
@@ -381,6 +381,15 @@ li {
 .userKeyup:hover{
     background-color: wheat;
 }
+.userLogin {
+    margin-top: -25%;
+}
+.userLogin>li:nth-child(1) {
+    font-size: larger; 
+}
+.userLogin>li:nth-child(2) {
+    background-color: brown;
+}
 /* index>nav>section() 영역 */
 .menuSection {
     width: 100%;
@@ -714,7 +723,7 @@ li {
     }
     .bg_macbook {
         width: 100%;
-        height: 100%;
+        height: 89%;
         top: 7%;
         left: 0%;
     }
