--- a/12/css/singup_form.css
+++ b/12/css/singup_form.css
@@ -629,6 +629,12 @@ a {
     .loginTopWrap {
         left: 39%;
     }
+    .login_subWrap_1 {
+        top: 18%;
+    }
+    .login_subWrap_2 {
+        top: 46%;
+    }
     /* 로그인 메인영역 */
     .loginWrapBg {
         left: 2%;
