--- a/12/css/login_form.css
+++ b/12/css/login_form.css
@@ -196,6 +196,7 @@ a {
 .loginFormBox>div>input {
     border: transparent;
     background-color: #EBFCFF;
+    width: 80%;
 }
 .loginButton {
     margin-top: 10%;
