--- a/12/css/singup_form.css
+++ b/12/css/singup_form.css
@@ -103,7 +103,7 @@ a {
 /* (로그인페이지 & 나의정보페이지와 동일) */
 .loginTopWrap {
     top: 15%;
-    left: 39.5%;
+    left: 41.5%;
     width: 20%;
     height: 10%;
     position: absolute;
@@ -157,7 +157,7 @@ a {
     position: absolute;
     border: 1px solid transparent;
     border-radius: 5%;
-    padding: 2%;
+    padding: 1% 2%;
 }
 .loginWrap_in {
     content: "";
@@ -166,13 +166,14 @@ a {
     padding: 2%;
 }
 .login_Header {
-    padding: 2% 10%;
+    padding: 2% 2%;
     text-align: right;
 }
 .login_Header>h2 {
     font-family: 'yg-jalnan';
     font-size: x-small;
     color: #009FF5;
+    margin: 0%;
 }
 
 .login_center {
@@ -181,28 +182,59 @@ a {
 .loginFormBox {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     color: #E0952C;
 }
-
-.loginFormBox>label {
-    margin-top: 10%;
-    margin-bottom: 5%;
-}
-.userIdWrap, .userPwWrap {
-    margin-bottom: 10%;
+/* 로그인페이지 & 나의정보페이지와
+상의함(추가됨) */
+.uesr_inputTop {
     width: 98%;
     height: 1.6rem;
     padding-top: 2%;
-    text-align: center;
+    display: flex;
+}
+.uesr_inputTop1 {
+    width: 98%;
+    height: 1.6rem;
+    padding-top: 2%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.uesr_inputTop1>button {
+    font-family: 'yg-jalnan';
+    font-size: 8pt;
+    font-weight: 10;
+    letter-spacing: 2px;
+    background-color: #E0952C;
+    border-radius: 15px;
+    color: #EBFCFF;
+    border: transparent solid 1px;
+    cursor: pointer;
+}
+/* 로그인페이지 & 나의정보페이지와
+margin 값 상의함 */
+.loginFormBox>label {
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+/* 로그인페이지 & 나의정보페이지와
+margin 값 상의함 */
+.userIdWrap, .userPwWrap
+,.userPwCheckWrap,.userPhen
+,.userEmailWrap {
+    margin-bottom: 2%;
+    width: 98%;
+    height: 1.6rem;
+    padding-top: 2%;
     background-color: #EBFCFF;
     border-radius: 5px;
     border: #E0952C solid 1px;
+    text-align: center;
 }
 .loginFormBox>div>input {
     border: transparent;
     background-color: #EBFCFF;
+    width: 80%;
 }
 .loginButton {
     margin-top: 10%;
@@ -214,109 +246,13 @@ a {
     color: #EBFCFF;
     font-family: 'yg-jalnan';
     cursor: pointer;
-}
-.loginButton_Naver {
-    margin-top: 10%;
-    width: 96%;
-    padding: 2%;
-    border: transparent;
-    border-radius: 5px;
-    background-color: #EBFCFF;
-    color: #E0952C;
-    font-family: 'yg-jalnan';
-    font-size: smaller;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-.loginButton_Naver>img {
-    width: 1.5rem;
-    height: 1.5rem;
-    border: 1px transparent solid;
-    border-radius: 20%;
-    margin-right: 5%;
-}
-.loginButton_Naver>p {
-    margin: 0;
+    letter-spacing: 2pt;
 }
 
-/* 아이디찾기&비밀번호찾기&회원가입 버튼  */
-.login_subWrap {
-    top: 54%;
-    left: 98%;
-    position: absolute;
-    padding: 2%;
-}
-.login_subWrap_1, .login_subWrap_2 {
-    width: 6rem;
-    background-color: #2B92D1;
-    border-radius: 0 5px 5px 0;
-    color: #EBFCFF;
-    margin-bottom: 10%;
-    text-align: end;
-    padding: 10%;
-}
-.login_subWrap_3 {
-    width: 6rem;
-    background-color: #E0952C;
-    border-radius: 0 5px 5px 0;
-    color: #EBFCFF;
-    margin-bottom: 10%;
-    text-align: end;
-    padding: 10%;
-}
-.login_subWrap_1:hover {
-    width: 8rem;
-    transition-duration: 2s;
-}
-.login_subWrap_1:hover .login_subWrap_ch1 {
-    font-size: small;
-    display: none;
-}
-.login_subWrap_1:hover .login_subWrap_ch2 {
-    font-size: small;
-    display: block;
-}
-.login_subWrap_2:hover {
-    width: 8rem;
-    transition-duration: 2s;
-}
-.login_subWrap_2:hover .login_subWrap_ch1 {
-    font-size: small;
-    display: none;
-}
-.login_subWrap_2:hover .login_subWrap_ch2 {
-    font-size: small;
-    display: block;
-}
-.login_subWrap_3:hover {
-    width: 8rem;
-    transition-duration: 2s;
-}
-.login_subWrap_3:hover .login_subWrap_ch1 {
-    font-size: small;
-    display: none;
-}
-.login_subWrap_3:hover .login_subWrap_ch2 {
-    font-size: small;
-    display: block;
-}
-
-.login_subWrap_ch1 {
-    margin: 0;
-    font-size: x-small;
-    display: block;
-}
-.login_subWrap_ch2 {
-    margin: 0;
-    font-size: x-small;
-    display: none;
-}
 /* 하단 footer */
 .loginBottomWrap {
     top: 92%;
-    left: 39.5%;
+    left: 41.5%;
     width: 20%;
     height: 10%;
     position: absolute;
@@ -339,9 +275,11 @@ a {
     /* 로그인 메인영역 */
     .loginWrapBg {
         left: 40%;
+        height: 28rem;
     }
     .loginWrap {
         left: 40%;
+        height: 28rem;
     }
 }
 
@@ -452,13 +390,11 @@ a {
         top: 20%;
         left: 29%;
         width: 19.5rem;
-        height: 28rem;
     }
     .loginWrap {
         top: 20%;
         left: 29%;
         width: 19.5rem;
-        height: 28rem;
     }
     /* 하단 footer */
     .loginBottomWrap {
@@ -483,71 +419,6 @@ a {
         left: 25%;
         width: 20.5rem;
         height: 28rem;
-    }
-
-    .login_subWrap {
-        position: unset;
-    }
-    .login_subWrap>div {
-        position: absolute;
-    }
-    .login_subWrap_1 {
-        top: 20%;
-        left: 60%;
-        width: 20%;
-        height: 4%;
-        margin-bottom: 0%;
-        text-align: center;
-        border-radius: 5px;
-        padding: 0;
-        padding: 1% 1% 0 1%;
-    }
-    .login_subWrap_2 {
-        top: 48%;
-        left: 60%;
-        width: 22%;
-        height: 4%;
-        margin-bottom: 0%;
-        text-align: center;
-        border-radius: 5px;
-        padding: 1% 1% 0 1%;
-    }
-    .login_subWrap_3 {
-        top: -2%;
-        left: 6%;
-        width: 30%;
-        height: 5%;
-        margin-bottom: 0%;
-        text-align: center;
-        border-radius: 5px;
-        padding: 0;
-        padding-top: 1%;
-    }
-    .login_subWrap_3>p {
-        font-size: medium;
-    }
-    .login_subWrap>div>p {
-        margin: 0;
-    }
-    .login_subWrap_1:hover {
-        width: 30%;
-        transition-duration: 2s;
-    }
-    .login_subWrap_2:hover {
-        width: 30%;
-        transition-duration: 2s;
-    }
-    .login_subWrap_3:hover {
-        padding-top: 0%;
-        width: 50%;
-        transition-duration: 2s;
-    }
-    .login_subWrap_3:hover .login_subWrap_ch1 {
-        display: none;
-    }
-    .login_subWrap_3:hover .login_subWrap_ch2 {
-        font-size: large;
-        display: block;
     }
     /* 하단 footer */
     .loginBottomWrap {
@@ -575,12 +446,6 @@ a {
         width: 22.5rem;
         height: 32rem;
     }
-    .login_subWrap_1 {
-        top: 18%;
-    }
-    .login_subWrap_2 {
-        top: 44%;
-    }
     /* 하단 footer */
     .loginBottomWrap {
         left: 41%;
@@ -599,13 +464,6 @@ a {
         width: 22.5rem;
         height: 30rem;
     }
-    .login_subWrap_1 {
-        top: 18%;
-    }
-    .login_subWrap_2 {
-        top: 47%;
-    }
-
 }
 @media all and (max-width:490px) {
     /* 상단 로고영역 */
@@ -637,20 +495,14 @@ a {
     .loginTopWrap {
         left: 39%;
     }
-    .login_subWrap_1 {
-        top: 14%;
-    }
-    .login_subWrap_2 {
-        top: 38%;
-    }
     /* 로그인 메인영역 */
     .loginWrapBg {
-        left: 2%;
+        left: 6%;
         width: 87.5%;
         height: 35rem;
     }
     .loginWrap {
-        left: 2%;
+        left: 6%;
         width: 87.5%;
         height: 35rem;
     }
