--- a/12/css/singup_form.css
+++ b/12/css/singup_form.css
@@ -140,7 +140,7 @@ a {
     top: 28%;
     left: 42%;
     width: 17.5rem;
-    height: 26rem;
+    height: 25rem;
     background-color: aliceblue;
     position: absolute;
     border: 1px solid transparent;
@@ -153,7 +153,7 @@ a {
     top: 28%;
     left: 42%;
     width: 17.5rem;
-    height: 26rem;
+    height: 25rem;
     position: absolute;
     border: 1px solid transparent;
     border-radius: 5%;
@@ -254,7 +254,7 @@ margin 값 상의함 */
     top: 92%;
     left: 41.5%;
     width: 20%;
-    height: 10%;
+    height: 5%;
     position: absolute;
     font-size: x-small;
     text-align: center;
@@ -275,11 +275,11 @@ margin 값 상의함 */
     /* 로그인 메인영역 */
     .loginWrapBg {
         left: 40%;
-        height: 28rem;
+        height: 27rem;
     }
     .loginWrap {
         left: 40%;
-        height: 28rem;
+       height: 27rem;        height: 27rem;
     }
 }
 
