--- a/12/12Project-main/css/signup_form.css
+++ b/12/12Project-main/css/signup_form.css
@@ -19,12 +19,12 @@ a {
     text-decoration: none;
 }
 
-/* 로그인 페이지 Background */
+/* 회원가입 페이지 Background */
+/* (로그인페이지 & 나의정보페이지와 일부동일) */
 .loginPage {
     position: relative;
     width: 100%;
     height: 100%;
-    border: 1px solid palegreen;
 }
 .loginBg {
     position: absolute;
@@ -35,7 +35,9 @@ a {
     /* opacity: 80%; */
 }
 .loginPage_bgTop {
-    height: 60%;
+    /* 로그인페이지 & 나의정보페이지와
+     height 값 상의함 */
+    height: 28%; 
     width: 100%;
     background: linear-gradient(60deg, #009FF5 0%, #59B3A7 100%);
 }
@@ -53,6 +55,7 @@ a {
     height: 20%;
 }
 .loginPage_bgWaves {
+    
     position: absolute;
     content: "";
     width: 100%;
@@ -60,13 +63,15 @@ a {
     margin-bottom:-7px; /*Fix for safari gap*/
 }
 .loginPage_bgFooter {
+    /* 로그인페이지 & 나의정보페이지와
+     height 값 상의함 */
     content: "";
-    height:40%;
+    height: 70%;
     width: 100%;
     background-color: #EEE8A9;
 }
-/* 로그인 페이지 Background Animation */
-
+/* 회원가입 페이지 Background Animation */
+/* (로그인페이지 & 나의정보페이지와 동일) */
 .parallax > use {
     animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
 }
@@ -95,8 +100,9 @@ a {
     }
 }
 /* 상단 로고영역 */
+/* (로그인페이지 & 나의정보페이지와 동일) */
 .loginTopWrap {
-    top: 15%;
+    top: 10%;
     left: 41.5%;
     width: 20%;
     height: 10%;
@@ -126,14 +132,15 @@ a {
 .loginTopWrap_logo:hover .loginTop_home {
     display: block;
 }
-/* 로그인 메인영역 */
-/* 로그인 메인영역(loginWrap)에 키업시 loginWrapBg의 opacity 변경 */
+/* 회원가입 메인영역 */
+/* 회원가입 메인영역(loginWrap)에 키업시 loginWrapBg의 opacity 변경 */
+/* (로그인페이지 & 나의정보페이지와 일부동일) */
 .loginWrapBg {
     content: "";
-    top: 28%;
+    top: 22%;
     left: 42%;
     width: 17.5rem;
-    height: 26rem;
+    height: 29rem;
     background-color: aliceblue;
     position: absolute;
     border: 1px solid transparent;
@@ -143,14 +150,14 @@ a {
 }
 
 .loginWrap {
-    top: 28%;
+    top: 22%;
     left: 42%;
     width: 17.5rem;
-    height: 26rem;
+    height: 29rem;
     position: absolute;
     border: 1px solid transparent;
     border-radius: 5%;
-    padding: 2%;
+    padding: 1% 2%;
 }
 .loginWrap_in {
     content: "";
@@ -159,13 +166,14 @@ a {
     padding: 2%;
 }
 .login_Header {
-    padding: 2% 10%;
+    padding: 2% 2%;
     text-align: right;
 }
 .login_Header>h2 {
     font-family: 'yg-jalnan';
     font-size: x-small;
     color: #009FF5;
+    margin: 0%;
 }
 
 .login_center {
@@ -174,29 +182,64 @@ a {
 .loginFormBox {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     color: #E0952C;
 }
-
-.loginFormBox>label {
-    margin-top: 10%;
-    margin-bottom: 5%;
-}
-.userIdWrap, .userPwWrap {
-    margin-bottom: 10%;
+/* 로그인페이지 & 나의정보페이지와
+상의함(추가됨) */
+.uesr_inputTop {
     width: 98%;
-    height: 1.6rem;
+    height: 1rem;
     padding-top: 2%;
-    text-align: center;
+    display: flex;
+}
+.user_inputTop1 {
+    width: 98%;
+    height: 1rem;
+    padding-top: 2%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.user_inputTop1>button {
+    font-family: 'yg-jalnan';
+    font-size: 8pt;
+    font-weight: 10;
+    letter-spacing: 2px;
+    background-color: #E0952C;
+    border-radius: 15px;
+    color: #EBFCFF;
+    border: transparent solid 1px;
+    cursor: pointer;
+}
+/* 로그인페이지 & 나의정보페이지와
+margin 값 상의함 */
+.loginFormBox>div>label {
+
+    font-size: smaller;
+}
+.loginFormBox>div {
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+/* 로그인페이지 & 나의정보페이지와
+margin 값 상의함 */
+.userIdWrap, .userPwWrap
+,.userPwCheckWrap,.userPhenWrap
+,.userEmailWrap, .userNameWrap {
+    margin-bottom: 2%;
+    width: 98%;
+    height: 1.5rem;
+    padding-top: 2%;
     background-color: #EBFCFF;
     border-radius: 5px;
     border: #E0952C solid 1px;
+    text-align: center;
 }
 .loginFormBox>div>input {
     border: transparent;
     background-color: #EBFCFF;
     width: 80%;
+    height: 1rem;
 }
 .loginButton {
     margin-top: 10%;
@@ -208,111 +251,15 @@ a {
     color: #EBFCFF;
     font-family: 'yg-jalnan';
     cursor: pointer;
-}
-.loginButton_Naver {
-    margin-top: 10%;
-    width: 96%;
-    padding: 2%;
-    border: transparent;
-    border-radius: 5px;
-    background-color: #EBFCFF;
-    color: #E0952C;
-    font-family: 'yg-jalnan';
-    font-size: smaller;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-.loginButton_Naver>img {
-    width: 1.5rem;
-    height: 1.5rem;
-    border: 1px transparent solid;
-    border-radius: 20%;
-    margin-right: 5%;
-}
-.loginButton_Naver>p {
-    margin: 0;
+    letter-spacing: 2pt;
 }
 
-/* 아이디찾기&비밀번호찾기&회원가입 버튼  */
-.login_subWrap {
-    top: 54%;
-    left: 98%;
-    position: absolute;
-    padding: 2%;
-}
-.login_subWrap_1, .login_subWrap_2 {
-    width: 6rem;
-    background-color: #2B92D1;
-    border-radius: 0 5px 5px 0;
-    color: #EBFCFF;
-    margin-bottom: 10%;
-    text-align: end;
-    padding: 10%;
-}
-.login_subWrap_3 {
-    width: 6rem;
-    background-color: #E0952C;
-    border-radius: 0 5px 5px 0;
-    color: #EBFCFF;
-    margin-bottom: 10%;
-    text-align: end;
-    padding: 10%;
-}
-.login_subWrap_1:hover {
-    width: 8rem;
-    transition-duration: 2s;
-}
-.login_subWrap_1:hover .login_subWrap_ch1 {
-    font-size: small;
-    display: none;
-}
-.login_subWrap_1:hover .login_subWrap_ch2 {
-    font-size: small;
-    display: block;
-}
-.login_subWrap_2:hover {
-    width: 8rem;
-    transition-duration: 2s;
-}
-.login_subWrap_2:hover .login_subWrap_ch1 {
-    font-size: small;
-    display: none;
-}
-.login_subWrap_2:hover .login_subWrap_ch2 {
-    font-size: small;
-    display: block;
-}
-.login_subWrap_3:hover {
-    width: 8rem;
-    transition-duration: 2s;
-}
-.login_subWrap_3:hover .login_subWrap_ch1 {
-    font-size: small;
-    display: none;
-}
-.login_subWrap_3:hover .login_subWrap_ch2 {
-    font-size: small;
-    display: block;
-}
-
-.login_subWrap_ch1 {
-    margin: 0;
-    font-size: x-small;
-    display: block;
-}
-.login_subWrap_ch2 {
-    margin: 0;
-    font-size: x-small;
-    display: none;
-}
 /* 하단 footer */
 .loginBottomWrap {
     top: 92%;
     left: 41.5%;
     width: 20%;
-    height: 10%;
+    height: 5%;
     position: absolute;
     font-size: x-small;
     text-align: center;
@@ -333,9 +280,11 @@ a {
     /* 로그인 메인영역 */
     .loginWrapBg {
         left: 40%;
+        height: 30rem;
     }
     .loginWrap {
         left: 40%;
+       height: 30rem;        
     }
 }
 
@@ -420,6 +369,13 @@ a {
     .loginTop_home {
         width: 100%;
     }
+    /* 로그인 메인영역 */
+    .loginWrapBg {
+        height: 31rem;
+    }
+    .loginWrap {
+        height: 31rem;
+    }
     /* 하단 footer */
     .loginBottomWrap {
         left: 40.5%;
@@ -443,16 +399,16 @@ a {
     }
     /* 로그인 메인영역 */
     .loginWrapBg {
-        top: 20%;
+        top: 18%;
         left: 29%;
         width: 19.5rem;
-        height: 28rem;
+        height: 33rem;
     }
     .loginWrap {
-        top: 20%;
+        top: 18%;
         left: 29%;
         width: 19.5rem;
-        height: 28rem;
+        height: 33rem;
     }
     /* 하단 footer */
     .loginBottomWrap {
@@ -471,77 +427,10 @@ a {
     .loginWrapBg {
         left: 25%;
         width: 20.5rem;
-        height: 28rem;
     }
     .loginWrap {
         left: 25%;
         width: 20.5rem;
-        height: 28rem;
-    }
-
-    .login_subWrap {
-        position: unset;
-    }
-    .login_subWrap>div {
-        position: absolute;
-    }
-    .login_subWrap_1 {
-        top: 20%;
-        left: 60%;
-        width: 20%;
-        height: 4%;
-        margin-bottom: 0%;
-        text-align: center;
-        border-radius: 5px;
-        padding: 0;
-        padding: 1% 1% 0 1%;
-    }
-    .login_subWrap_2 {
-        top: 48%;
-        left: 60%;
-        width: 22%;
-        height: 4%;
-        margin-bottom: 0%;
-        text-align: center;
-        border-radius: 5px;
-        padding: 1% 1% 0 1%;
-    }
-    .login_subWrap_3 {
-        top: -2%;
-        left: 6%;
-        width: 30%;
-        height: 5%;
-        margin-bottom: 0%;
-        text-align: center;
-        border-radius: 5px;
-        padding: 0;
-        padding-top: 1%;
-    }
-    .login_subWrap_3>p {
-        font-size: medium;
-    }
-    .login_subWrap>div>p {
-        margin: 0;
-    }
-    .login_subWrap_1:hover {
-        width: 30%;
-        transition-duration: 2s;
-    }
-    .login_subWrap_2:hover {
-        width: 30%;
-        transition-duration: 2s;
-    }
-    .login_subWrap_3:hover {
-        padding-top: 0%;
-        width: 50%;
-        transition-duration: 2s;
-    }
-    .login_subWrap_3:hover .login_subWrap_ch1 {
-        display: none;
-    }
-    .login_subWrap_3:hover .login_subWrap_ch2 {
-        font-size: large;
-        display: block;
     }
     /* 하단 footer */
     .loginBottomWrap {
@@ -562,22 +451,17 @@ a {
     .loginWrapBg {
         left: 17.5%;
         width: 22.5rem;
-        height: 32rem;
+        height: 35rem;
     }
     .loginWrap {
         left: 17.5%;
         width: 22.5rem;
-        height: 32rem;
-    }
-    .login_subWrap_1 {
-        top: 18%;
-    }
-    .login_subWrap_2 {
-        top: 44%;
+        height: 35rem;
     }
     /* 하단 footer */
     .loginBottomWrap {
         left: 41%;
+        bottom: 0%;
     }
 
 }
@@ -586,20 +470,11 @@ a {
     .loginWrapBg {
         left: 14%;
         width: 22.5rem;
-        height: 30rem;
     }
     .loginWrap {
         left: 14%;
         width: 22.5rem;
-        height: 30rem;
     }
-    .login_subWrap_1 {
-        top: 18%;
-    }
-    .login_subWrap_2 {
-        top: 47%;
-    }
-
 }
 @media all and (max-width:490px) {
     /* 상단 로고영역 */
@@ -610,19 +485,20 @@ a {
     .loginWrapBg {
         left: 4%;
         width: 25.5rem;
-        height: 35rem;
+        height: 37.5rem;
     }
     .loginWrap {
         left: 4%;
         width: 25.5rem;
-        height: 35rem;
+        height: 37.5rem;
     }
     .login_subWrap_2 {
         top: 44%;
     }
     /* 하단 footer */
     .loginBottomWrap {
-        left: 40%;
+        left: 34%;
+        width: 30%;
     }
 }
 
@@ -631,26 +507,15 @@ a {
     .loginTopWrap {
         left: 39%;
     }
-    .login_subWrap_1 {
-        top: 14%;
-    }
-    .login_subWrap_2 {
-        top: 38%;
-    }
     /* 로그인 메인영역 */
     .loginWrapBg {
         left: 6%;
         width: 87.5%;
-        height: 35rem;
+        height: 37rem;
     }
     .loginWrap {
         left: 6%;
         width: 87.5%;
-        height: 35rem;
-    }
-    /* 하단 footer */
-    .loginBottomWrap {
-        left: 34%;
-        width: 30%;
+        height: 37rem;
     }
 }
