--- a/movieWeb/css/stely_potoplay.css
+++ b/movieWeb/css/stely_potoplay.css
@@ -1,3 +1,6 @@
+.pop_section {
+    margin-top: 5%;
+}
 .pop_section_mainList>article{
     display: flex;
     flex-direction: column;
@@ -37,7 +40,7 @@
     justify-content: space-around;
 }
 .pop_section_main_top {
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 
     
 }
@@ -51,5 +54,62 @@
 }
 .pop_section_main_topList {
     width: 100%;
-    border: 1px saddlebrown solid;
+}
+
+
+/* screening_movie.php */
+.screening_movie_container {
+    width: 100%;
+    height: 100%;
+    overflow-x: scroll;   
+}
+.screening_movie_container::-webkit-scrollbar {
+    height: 1vw;
+    width: 1vw;
+}
+.screening_movie_container::-webkit-scrollbar-thumb {
+
+    background-color: hsla(0, 0%, 42%, 0.49);
+    border-radius: 100px;
+
+}
+
+.screening_movie_listWrap {
+    /* position: absolute; */
+    width: auto;
+    height: 100%;
+    display: flex;
+    touch-action: pan-x;
+}
+.screening_movie_listBox>a {
+    cursor: pointer;
+}
+.screening_movie_listBox {
+    width: 20rem;
+    height: 98%;
+    padding: 0% 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+.screening_movie_imgWrap {
+    width: 10rem;
+    padding: 2%;
+    border-radius: 6%;
+    box-shadow: 4px 5px 9px -2px #1e2C5C;
+}
+
+.screening_movie_imgWrap>img {
+    width: 98%;
+    height: 98%;
+    border-radius: 6%;
+}
+.screening_movie_ticketBtn {
+    border-radius: 5px;
+    border: #1E2C5C solid 1px;
+    background-color: aliceblue;
+    cursor: pointer;
+    font-size: large;
+    font-family: 'Do Hyeon', sans-serif;
 }
