--- a/movieWeb/css/stely_potoplay.css
+++ b/movieWeb/css/stely_potoplay.css
@@ -1,5 +1,5 @@
 .pop_section {
-    margin-top: 5%;
+    margin-top: 10%;
 }
 .pop_section_mainList>article{
     display: flex;
@@ -112,4 +112,97 @@
     cursor: pointer;
     font-size: large;
     font-family: 'Do Hyeon', sans-serif;
+}
+/* potopaly_list.php (게시판목록) */
+.pop_section_main_centerList {
+    height: 56rem;
+}
+/* potopaly_list.php (게시판목록) */
+.potoplay_listContainer {
+    width: 96%;
+    padding: 2%;
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(2, 48%);
+    grid-auto-rows: 48%;
+}
+
+.potoplay_listWrap {
+    width: 92%;
+    margin: 1%;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 6%;
+    box-shadow: 4px 5px 9px -2px #1e2C5C;
+}
+
+.potoplay_listImgWrap {
+    width: 96%;
+    height: 21rem;
+    padding: 2%;
+    text-align: center;
+
+}
+.potoplay_listImgWrap>img {
+    max-width: 96%;
+    max-height: 21rem;
+    border-radius: 6%;
+}
+.potoplay_listTitleWrap {
+    padding: 0 5%;
+}
+.potoplay_listTextWrap {
+    width: 96%;
+    padding: 5%;
+    display: flex;
+    flex-direction: row;
+}
+.potoplay_listText {
+    width: 70%;
+}
+.potoplay_listLike {
+    width: 26%;
+    padding: 5%;
+}
+.potoplay_listLikeBtn {
+    width: 3rem;
+    height: 3rem;
+    background-color: #ecd5e3;
+    border: 1px solid transparent;
+    border-radius: 25%;
+    text-align: center;    
+}
+.potoplay_listLikeBtn>img {
+    width:  95%;
+    height: 95%;
+    margin: 2%;
+}
+.potoplay_listText>p>img {
+    width: 1.5rem
+}
+.potoplay_listText>p {
+    margin: 0;
+    margin-bottom: 4%;
+    font-family: 'Do Hyeon', sans-serif;
+}
+.potoplay_listText>p>span {
+    margin: 0% 2%;
+}
+.potoplay_listLikeBtn_ChHover {
+    display: none;
+}
+
+.potoplay_listLikeBtn:hover .potoplay_listLikeBtn_Ch {
+    display: none;
+}
+.potoplay_listLikeBtn:hover .potoplay_listLikeBtn_ChHover {
+    display: block;
+}
+
+/* potoplay_list_view.php */
+.pop_section2,.pop_section3 {
+    margin-top: 15%;
+    width: 100%;
+    height: 100%;
 }
