--- a/movieWeb/css/stely_form.css
+++ b/movieWeb/css/stely_form.css
@@ -196,14 +196,15 @@ li {
 }
 .wrap {
     width: 100%;
-    /* height: 100%; */
+    min-height: 100%;
+    position: relative;
     background-color: white;
     display: flex;
     flex-direction: column;
 }
 /* index_from>header() 영역 */
 .pop_header {
-    width: 22.5%;
+    width: 23.5%;
     height: auto;
     padding: 0.5% 2%;
     position: fixed;
@@ -235,8 +236,6 @@ li {
     margin-top: 2%;
     float: left;
     padding-left: 10%;
-
-
 }
 .pop_header_home {
     margin-top: 2%;
@@ -252,6 +251,7 @@ li {
 .pop_section {
     background-color: white;
     width: 96%;
+    min-height: 53rem;
     margin-top: 12%;
     padding: 2%;
     content: "";
@@ -271,7 +271,7 @@ li {
 }
 .pop_section_main>article {
     width: 92%;
-    padding: 2% 4% 4% 4%;
+    padding: 2% 4% 2% 4%;
     text-align: center;
 }
 .pop_section_main>article>h4 {
@@ -287,11 +287,7 @@ li {
     width: 100%;
     padding-top: 4%;
 }
-.pop_section_mainList>article {
-    width: 92%;
-    padding: 2% 4% 4% 2%;
-    text-align: center;
-}
+
 /* form부분 */
 .form {
     width: 96%;
@@ -352,7 +348,8 @@ li {
 .footer {
     background-color: gray;
     width: 96%;
-    height: auto;
+    height: 15rem;
+    bottom: 0;
     padding: 2%;
     content: "";
 }
