--- a/movieWeb/css/stely_index.css
+++ b/movieWeb/css/stely_index.css
@@ -196,7 +196,8 @@ li {
 }
 .wrap {
     width: 100%;
-    height: auto;
+    min-height: 100%;
+    position: relative;
     background-color: sandybrown;
     display: flex;
     flex-direction: column;
@@ -279,16 +280,9 @@ li {
 /* index>section() 영역 */
 .section {
     width: 100%;
-    height: 80%;
+    min-height: 53rem;
 
     background-color: wheat;
-}
-/* index>footer() 영역 */
-.footer {
-    width: 100%;
-}
-.footer>div {
-    padding: 2%;
 }
 
 /* ------index>menu(nav)---------------------------- */
@@ -552,7 +546,7 @@ li {
 .footer {
     background-color: gray;
     width: 96%;
-    height: auto;
+    height: 15rem;
     padding: 2%;
     content: "";
 }
