--- a/movieWeb/css/stely_potoplayView.css
+++ b/movieWeb/css/stely_potoplayView.css
@@ -65,15 +65,14 @@
 .potoplay_listWrap {
     width: 90%;
     padding: 10% 5%;
-    height: 49rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .potoplay_view_listTitleWrap {
     width: 90%;
-    height: 10%;
     padding: 0% 20%;
+    margin-bottom: 1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -105,7 +104,7 @@
 .potopalay_view_listImg {
     width: 60%;
     max-height: 30rem;
-    border-radius: 6%;
+    border-radius: 15px;
     box-shadow: 4px 5px 9px -2px #1e2C5C;
 }
 .potoplay_view_listLikeWrap {
