--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -77,6 +77,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition-duration: 0.2s;
     background-color: rgb(231, 199, 150);
 }
 .menuberList_li {
@@ -94,6 +95,7 @@ nav {
 .menuberList_li>a {
     font-family: 'Y_Spotlight';
     color: #ea9c2a;
+    position: absolute;
 }
 .menuberList_li>a:hover {
     font-size: large;
@@ -105,7 +107,7 @@ nav {
     border: red 1px solid;
     background-color: rgb(231, 199, 150);
     top: 100%;
-    min-width: 10rem;
+    width: 100%;
 }
 .menuberList_liCh>ul {
     width: 100%;
@@ -144,6 +146,13 @@ nav {
         width: 22%;
     }
 }
+@media all and (max-width:890px) {
+    .menuberList_liCh>ul>li {
+        word-break: keep-all;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+}
 @media all and (max-width:690px) {
     .header_left {
         width: 60%;
@@ -153,5 +162,17 @@ nav {
     }
     .header_rightList>a>li {
         font-size: smaller;
+    }
+    .menuberList_li>a {
+        font-size: 0.7em;
+    }
+    .menuberList_li>a:hover {
+        font-size: 0.8em;
+    }
+    .menuberList_liCh>ul>li {
+        font-size: x-small;
+    }
+    .menuberList_liCh>ul>li:hover {
+        font-size: small;
     }
 }
