--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -28,7 +28,7 @@ ul {
 
 .wrapTop {
     width: 96%;
-    padding: 2%;
+    padding: 0 2%;
     background-color: #f3f6c8;
     position: fixed;
 }
@@ -36,7 +36,7 @@ ul {
     width: 96%;
     padding: 0 2%;
     display: flex;
-    border: #6d4720 1px solid;
+    /* border: #6d4720 1px solid; */
 }
 .header_left {
     width: 80%;
@@ -65,11 +65,26 @@ ul {
     font-family: 'Y_Spotlight';
 }
 /* ----------haeder>menuber-------  */
+.menu_btn {
+    display: none;
+    position: absolute;
+}
+.menu_btn>img {
+    width: 2rem;
+    height: 1.5rem;
+    margin: 1rem;
+}
+.menuClose {
+    display: none;
+}
+.menuClose>img {
+    width: 2rem;
+}
 nav {
     width: 96%;
     padding: 0 2%;
     height: 3rem;
-    border: blue 1px solid;
+    background-color: #f3f6c8;
 }
 .menuberList{
     width: 100%;
@@ -78,7 +93,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     transition-duration: 0.2s;
-    background-color: rgb(231, 199, 150);
+    background-color: #f3f6c8;
 }
 .menuberList_li {
     width: 16%;
@@ -86,10 +101,6 @@ nav {
     display: flex;
     justify-content: space-around;
     position: relative;
-}
-
-.menuberList:hover .menuberList_liCh{
-    display: block;
 }
 
 .menuberList_li>a {
@@ -103,9 +114,9 @@ nav {
 }
 .menuberList_liCh {
     position: absolute;
+    z-index: 10;
     display: none;
-    border: red 1px solid;
-    background-color: rgb(231, 199, 150);
+    background-color: #f3f6c8;
     top: 100%;
     width: 100%;
 }
@@ -145,12 +156,19 @@ nav {
     .header_right {
         width: 22%;
     }
+
 }
 @media all and (max-width:890px) {
     .menuberList_liCh>ul>li {
         word-break: keep-all;
         text-align: center;
         margin-bottom: 1rem;
+    }
+
+}
+@media all and (min-width:689px) {
+    .menuberList:hover .menuberList_liCh{
+        display: block;
     }
 }
 @media all and (max-width:690px) {
@@ -163,16 +181,25 @@ nav {
     .header_rightList>a>li {
         font-size: smaller;
     }
-    .menuberList_li>a {
-        font-size: 0.7em;
+    .menu_btn {
+        display: block;
     }
-    .menuberList_li>a:hover {
-        font-size: 0.8em;
+    nav {
+        height: auto;
+        display: none;
+        top: 100%;
     }
-    .menuberList_liCh>ul>li {
-        font-size: x-small;
+    .menuClose {
+        display: block;
     }
-    .menuberList_liCh>ul>li:hover {
-        font-size: small;
+    .menuberList{
+        flex-direction: column;
+        height: auto;
     }
+    .menuberList_li {
+        width: 100%;
+        height: 2rem;
+        margin-bottom: 1rem;
+    }
+    
 }
