--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -80,6 +80,37 @@ ul {
 .menuClose>img {
     width: 2rem;
 }
+.menuSub {
+    width: 96%;
+    padding: 1% 1% 1% 3%;
+    display: none;
+    margin-bottom: 10%;
+}
+.menuSub>div {
+    width: 96%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.menuSubCh {
+    margin: 5px 2px;
+    border: transparent solid 1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: x-small;
+    color: #ea9c2a;
+    font-family: 'Y_Spotlight';
+}
+.menuSubCh>img {
+    margin-bottom: 5px;
+}
+.menuSubCh:hover {
+    font-size: small;
+    color: #0f7b3a;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px -5px #ea9c2a;
+}
 nav {
     width: 96%;
     padding: 0 2%;
@@ -190,18 +221,22 @@ nav {
         height: auto;
         display: none;
         top: 100%;
+        left: 0%;
     }
     .menuClose {
+        display: block;
+    }
+    .menuSub {
         display: block;
     }
     .menuberList{
         flex-direction: column;
         height: auto;
+        margin-bottom: 1rem;
     }
     .menuberList_li {
         width: 100%;
         height: 2rem;
         margin-bottom: 1rem;
     }
-    
 }
