--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -31,6 +31,7 @@ ul {
     padding: 0 2%;
     background-color: #f3f6c8;
     position: fixed;
+    z-index: 10;
 }
 .wrapTop>header {
     width: 96%;
@@ -90,6 +91,7 @@ ul {
     width: 96%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    
 }
 .menuSubCh {
     margin: 5px 2px;
@@ -112,6 +114,7 @@ ul {
     box-shadow: 5px 5px 5px -5px #ea9c2a;
 }
 nav {
+    z-index: 5;
     width: 96%;
     padding: 0 2%;
     height: 3rem;
@@ -167,20 +170,95 @@ nav {
     cursor: pointer;
 }
 .menuberList_liCh>ul>li:hover {
-    font-size: smaller;
     color: #0f7b3a;
 }
 .wrapCenter {
-    width: 96%;
-    height: 1000px;
-    padding: 2%;
-    background-color: #6d4720;
+    width: 100%;
+    padding-top: 7rem;
+}
+main {
+    width: 100%;
+    position: relative;
+}
+.main_banner_ImgWrap {
+    width: 100%;
+    border: #0f7b3a;
+}
+.main_banner_Imgbox {
+    width: 100%;
+}
+.main_banner_Imgbox>a {
+    width: 100%;
+}
+.main_banner_Imgbox>a>img {
+    width: 100%;
+}
+.main_banner_ImgControl {
+    content: "";
+    position: absolute;
+    bottom: 10%;
+    right: 20%;
+    width: 20%;
+    display: flex;
+    justify-content: end;
+    border: black;
+    
+}
+.main_banner_ImgControl>div {
+    content: "";
+    width: 0.8rem;
+    height: 0.8rem;
+    background-color: white;
+    border-radius: 50%;
+    margin: 0 2%;
+}
+.main_banner_quick {
+    position: absolute;
+    width: 30%;
+    height: 15%;
+    display: flex;
+    border: #0f7b3a;
+    bottom: -10%;
+    right: 20%;
+}
+.main_banner_quick>div{
+    padding: 2% 5%;
+    width: 50%;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.main_banner_quick>div>span{
+    display: block;
+    font-family: 'Y_Spotlight';
+    font-size: larger;
+}
+.main_banner_quick>div:nth-child(1) {
+    border-radius: 25px 0 0 0;
+    background-color: #ea9c2a;
+    color: #0f7b3a;
+}
+.main_banner_quick>div:nth-child(2) {
+    border-radius: 0 0 25px 0;
+    background-color: #0f7b3a;
+    color: #ea9c2a;
+}
+.main_banner_quick>div>img {
+    width: 2rem;
 }
 .wrapBottom {
     width: 96%;
     padding: 2%;
     height: 2000px;
     background-color: #ea9c2a;
+}
+@media all and (max-width:1480px) {
+    .main_banner_quick>div>span{
+        font-size: smaller;
+        word-break: keep-all;
+        text-align: center;
+    }
+
 }
 @media all and (max-width:1280px) {
     .header_left {
@@ -189,7 +267,20 @@ nav {
     .header_right {
         width: 22%;
     }
+    .main_banner_quick {
+        right: 5%;
+    }
 
+}
+@media all and (max-width:1024px) {
+    .main_banner_ImgControl>div {
+        width: 0.5rem;
+        height: 0.5rem;
+    }
+    .main_banner_quick {
+        bottom: -15%;
+        height: 22%;
+    }
 }
 @media all and (max-width:890px) {
     .menuberList_liCh>ul>li {
@@ -197,10 +288,9 @@ nav {
         text-align: center;
         margin-bottom: 1rem;
     }
-
 }
 @media all and (min-width:689px) {
-    .menuberList:hover .menuberList_liCh{
+    .menuberList_li:hover .menuberList_liCh{
         display: block;
     }
 }
@@ -212,7 +302,7 @@ nav {
         width: 32%;
     }
     .header_rightList>a>li {
-        font-size: smaller;
+        font-size: medium;
     }
     .menu_btn {
         display: block;
@@ -238,5 +328,12 @@ nav {
         width: 100%;
         height: 2rem;
         margin-bottom: 1rem;
+    }
+
+    .wrapCenter {
+        padding-top: 4rem;
+    }
+    .main_banner_quick {
+display: none;
     }
 }
