--- a/oneandthree/css/index.css
+++ b/oneandthree/css/index.css
@@ -35,8 +35,9 @@ ul {
 }
 .wrapTop>header {
     width: 96%;
-    padding: 0 2%;
+    padding: 1% 2% 0% 2%;
     display: flex;
+    justify-content: center;
     /* border: #6d4720 1px solid; */
 }
 .header_left {
@@ -116,7 +117,7 @@ ul {
 nav {
     z-index: 5;
     width: 96%;
-    padding: 0 2%;
+    padding: 0% 2% 1% 2%;
     height: 3rem;
     background-color: #f3f6c8;
 }
@@ -152,7 +153,7 @@ nav {
     z-index: 10;
     display: none;
     background-color: #f3f6c8;
-    top: 100%;
+    top: 200%;
     width: 100%;
 }
 .menuberList_liCh>ul {
@@ -176,7 +177,7 @@ nav {
 
 .wrapCenter {
     width: 100%;
-    padding-top: 7rem;
+    padding-top: 9rem;
 }
 main {
     width: 100%;
